--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASS}
-spring.datasource.url=jdbc:mysdsql://${DB_HOST}:${DB_PORT}/auth_db
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/auth_db
 spring.jpa.hibernate.ddl-auto=update
 server.error.include-message=always
 tokenSecret = ${SERVER_SECRET}
